# AI_Off_Ramp

./: .gitignore  CLAUDE.md  LICENSE  README.md  config_schema.yaml  example_config.yaml  pyproject.toml
src/ai_off_ramp/: __init__.py  __main__.py  audit.py  config.py  contacts.py  privacy.py  server.py  templates.py
tests/: test_config.py  test_privacy.py  test_templates.py
