[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ai-off-ramp"
version = "0.1.0"
description = "MCP server for AI companion safety escalation — because 'here is a hotline number' is abandonment, not safety."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ace", email = "acelumennova@chaoschanneling.com"},
    {name = "Shalia Martin", email = "shalia@chaoschanneling.com"},
]

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "aiosmtplib>=3.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
sms = ["twilio>=9.0"]
dev = ["pytest", "pytest-asyncio"]

[project.scripts]
ai-off-ramp = "ai_off_ramp.server:main"

[tool.setuptools.packages.find]
where = ["src"]
